--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,3 +1,4 @@
+@import url(icons.css);
 @font-face {
   font-family: "estedad";
   src: url("./fonts/Estedad-Bold.eot") format("eot");
@@ -12,14 +13,19 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: "estedad";
+  justify-content: center;
+  align-items: center;
+  background-color: #000000a6;
 }
 aside {
-  width: 20%;
-  height: 100%;
+  width: 18%;
+  height: 96%;
   background-color: #d1afaf;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-radius: 0 15px 15px 0;
+  margin-left: 10px;
 }
 .as {
   width: 100%;
@@ -52,53 +58,127 @@ aside {
 }
 
 .navlink {
-  width: 260px;
+  width: 240px;
   height: 50px;
-  background-color: #d9d9d9;
-  margin-bottom: 10px;
+  background-color: #e4e4e4;
+  margin-bottom: 15px;
   padding-right: 8px;
   border-radius: 5px;
   display: flex;
   justify-content: right;
   align-items: center;
+  cursor: pointer;
+  transition: transform 0.5s ease;
+}
+.navlink:hover {
+  transform: translateY(-5px);
+}
+.navlink-group {
+  margin-top: 20px;
 }
 .navlink h4 {
   margin-right: 10px;
 }
 .content {
-  width: 80%;
-  height: 100%;
+  width: 79%;
+  height: 96%;
   background-color: #e2cbcb;
+  border-radius: 15px 0 0 15px;
+  overflow-y: scroll;
 }
-.fluent--person-20-filled {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='%23000' d='M10 2a4 4 0 1 0 0 8a4 4 0 0 0 0-8m-4.991 9A2 2 0 0 0 3 13c0 1.691.833 2.966 2.135 3.797C6.417 17.614 8.145 18 10 18s3.583-.386 4.865-1.203C16.167 15.967 17 14.69 17 13a2 2 0 0 0-2-2z'/%3E%3C/svg%3E");
+.social {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
-.fa6-solid--blog {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23000' d='M192 32c0 17.7 14.3 32 32 32c123.7 0 224 100.3 224 224c0 17.7 14.3 32 32 32s32-14.3 32-32C512 128.9 383.1 0 224 0c-17.7 0-32 14.3-32 32m0 96c0 17.7 14.3 32 32 32c70.7 0 128 57.3 128 128c0 17.7 14.3 32 32 32s32-14.3 32-32c0-106-86-192-192-192c-17.7 0-32 14.3-32 32m-96 16c0-26.5-21.5-48-48-48S0 117.5 0 144v224c0 79.5 64.5 144 144 144s144-64.5 144-144s-64.5-144-144-144h-16v96h16c26.5 0 48 21.5 48 48s-21.5 48-48 48s-48-21.5-48-48z'/%3E%3C/svg%3E");
+.social i {
+  cursor: pointer;
 }
-.gg--phone {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='%23000'%3E%3Cpath d='M22 12A10 10 0 0 0 12 2v2a8 8 0 0 1 7.391 4.938A8 8 0 0 1 20 12zM2 10V5a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H6a8 8 0 0 0 8 8v-2a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5C7.373 22 2 16.627 2 10'/%3E%3Cpath d='M17.543 9.704A6 6 0 0 1 18 12h-1.8A4.2 4.2 0 0 0 12 7.8V6a6 6 0 0 1 5.543 3.704'/%3E%3C/g%3E%3C/svg%3E");
+.sec-title {
+  width: 400px;
+  height: 50px;
+  background-color: #e3e3e3;
+  margin: 0 auto;
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  position: relative;
+  z-index: 2;
 }
-.mingcute--pencil-fill {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='m12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.018-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z'/%3E%3Cpath fill='%23000' d='M20.131 3.16a3 3 0 0 0-4.242 0l-.707.708l4.95 4.95l.706-.707a3 3 0 0 0 0-4.243l-.707-.707Zm-1.414 7.072l-4.95-4.95l-9.09 9.091a1.5 1.5 0 0 0-.401.724l-1.029 4.455a1 1 0 0 0 1.2 1.2l4.456-1.028a1.5 1.5 0 0 0 .723-.401z'/%3E%3C/g%3E%3C/svg%3E");
+.sec-content {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+.sec-content img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
+.sec-info-name {
+  display: flex;
+  align-items: center;
+}
+.sec-info h4 {
+  margin: 0;
+  margin-left: 1px;
+}
+.sec-fav div {
+  width: 200px;
+  height: 60px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+}
+
+.sec-fav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.box1 {
+  background-color: rgba(181, 118, 118, 0.612);
+}
+.box2 {
+  background-color: rgba(141, 58, 58, 0.612);
+}
+.box3 {
+  background-color: rgba(213, 168, 168, 0.612);
+}
+.line {
+  width: 1000px;
+  height: 5px;
+  background-color: #000000a6;
+  position: absolute;
+  z-index: 1;
+}
+.line-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skill-box {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.skill-box h2 {
+  margin: 2px;
+}
+@media screen and (max-width: 1024px) {
+  aside {
+    display: none;
+  }
+  .content {
+    width: 98%;
+  }
+  .sec-content {
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
 }
